--- a/css/main.css
+++ b/css/main.css
@@ -212,6 +212,7 @@ footer {
         align-items: center;
         clip-path: circle(5.1% at 100% 0);
         transition: clip-path 1s ease-in-out;
+        z-index: 10; 
     }
 
     .nav-label {
